objects/LogException__e.object
<CustomObject>
    <fields>
        <fullName>Apex_Class__c</fullName>
        <label>Apex Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ErrorLineNumber__c</fullName>
        <label>ErrorLineNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExceptionTypeName__c</fullName>
        <label>ExceptionTypeName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exception_Type__c</fullName>
        <label>Exception Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InstanceName__c</fullName>
        <label>InstanceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_UserId__c</fullName>
        <label>Login UserId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_User_ProfileId__c</fullName>
        <label>Login User ProfileId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method__c</fullName>
        <label>Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record__c</fullName>
        <label>Record</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Stack_Trace__c</fullName>
        <label>Stack Trace</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>LogException</label>
    <pluralLabel>LogExceptions</pluralLabel>
</CustomObject>